chore: add npm script to run project easier locally

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "npm": ">=6.0.0"
   },
   "scripts": {
+    "start:dev": "npm run dev --",
     "dev": "vite dev",
     "build": "vite build",
     "build-docker": "DOCKER_BUILD=true vite build --verbose",
